# eagl-godot

./: .gitignore
car_ps2_tool/: README.md  hp2_car_uv_overlay.py
docs/: hp2_ps2_car_binary_structure.md  hp2_ps2_environment_config.md  hp2_ps2_track_mesh_reconstruction.md  track_render.md
docs/handing/: README.md  hp2_asset_to_row_map.csv  hp2_globalb_handling_rows.json  hp2_globalb_handling_summary.csv
godot_eagl_ps2/: icon.svg.import  project.godot
godot_eagl_ps2/eagl/: README.md
godot_eagl_ps2/scene/: Gamelevel.tscn  gamelevel.gd  gamelevel.gd.uid
godot_eagl_ps2/tools/: dump_car_tire_uv_overlay.gd  dump_car_tire_uv_overlay.gd.uid  extract_hp2_handling_docs.py
godot_project_src/: project.godot
godot_project_src/track_debug/: TrackDebug.gd.uid  TrackDebugCatalog.gd  TrackRenderZones.gd  TrackRenderZones.gd.uid  TrackRouteDebugLines.gd  TrackRouteDebugLines.gd.uid  TrackTopDownOverlay.gd  TrackTopDownOverlay.gd.uid  track_debug.tscn
map_otools/: converter_tst.py
map_otools/docs/: pipeline.md  track_wiki.md
map_otools/map_otools/: models.py  track_catalog.py  track_manager.py  utils.py
map_tools_pc/: main.py
map_tools_pc/map_otools/: __init__.py  (+2 more)
map_tools_ps2/: README.MD  check_lengths.py  inspect_adc.py  pyproject.toml
project_src/: icon.svg.import  main.tscn
ps2hp2_tool/: main.py  pyproject.toml
ps2hp2_tool/docs/: model_texture_analysis.md
ps2hp2_tool/src/map_tools_ps2/: binary.py  cli.py  glb_writer.py  model.py  obj_writer.py  textures.py
ps2hp2_tool/tests/: test_comp.py
ps2hp2_tool/tools/: analyze_bun_models.py
(+208 files in other folders)
